--- a/android/app/src/main/res/layout/counter_layout.xml
+++ b/android/app/src/main/res/layout/counter_layout.xml
@@ -5,13 +5,14 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="4dp"
+    android:background="@color/white"
     >
 
     <TextView
         android:id="@+id/counterText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Time Remaining"
+        android:text="Time Remaining for Handwriting Class"
         android:textSize="12sp"
         android:textColor="@android:color/black"
         android:layout_gravity="left"/>
@@ -36,7 +37,7 @@
                 android:layout_height="wrap_content"
                 android:text="00"
                 android:textSize="28sp"
-                android:textColor="@android:color/holo_blue_dark"/>
+                android:textColor="@color/timerText"/>
 
             <TextView
                 android:id="@+id/text_1"
@@ -44,7 +45,7 @@
                 android:layout_height="wrap_content"
                 android:text="Days"
                 android:textSize="14sp"
-                android:textColor="@android:color/holo_blue_dark"/>
+                android:textColor="@color/timerText"/>
         </LinearLayout>
         <TextView
             android:layout_width="wrap_content"
@@ -54,7 +55,7 @@
             android:layout_gravity="center_vertical"
             android:paddingHorizontal="4dp"
             android:textStyle="bold"
-            android:textColor="@android:color/holo_blue_dark"/>
+            android:textColor="@color/timerText"/>
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -68,7 +69,7 @@
                 android:layout_height="wrap_content"
                 android:text="00"
                 android:textSize="28sp"
-                android:textColor="@android:color/holo_blue_dark"/>
+                android:textColor="@color/timerText"/>
 
             <TextView
                 android:id="@+id/text_2"
@@ -76,7 +77,7 @@
                 android:layout_height="wrap_content"
                 android:text="Hours"
                 android:textSize="14sp"
-                android:textColor="@android:color/holo_blue_dark"/>
+                android:textColor="@color/timerText"/>
         </LinearLayout>
         <TextView
             android:layout_width="wrap_content"
@@ -86,7 +87,7 @@
             android:layout_gravity="center_vertical"
             android:paddingHorizontal="4dp"
             android:textStyle="bold"
-            android:textColor="@android:color/holo_blue_dark"/>
+            android:textColor="@color/timerText"/>
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -100,7 +101,7 @@
                 android:layout_height="wrap_content"
                 android:text="00"
                 android:textSize="28sp"
-                android:textColor="@android:color/holo_blue_dark"/>
+                android:textColor="@color/timerText"/>
 
             <TextView
                 android:id="@+id/text_3"
@@ -108,7 +109,7 @@
                 android:layout_height="wrap_content"
                 android:text="Minutes"
                 android:textSize="14sp"
-                android:textColor="@android:color/holo_blue_dark"/>
+                android:textColor="@color/timerText"/>
         </LinearLayout>
         <TextView
             android:layout_width="wrap_content"
@@ -118,7 +119,7 @@
             android:layout_gravity="center_vertical"
             android:paddingHorizontal="4dp"
             android:textStyle="bold"
-            android:textColor="@android:color/holo_blue_dark"/>
+            android:textColor="@color/timerText"/>
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -132,7 +133,7 @@
                 android:layout_height="wrap_content"
                 android:text="00"
                 android:textSize="28sp"
-                android:textColor="@android:color/holo_blue_dark"/>
+                android:textColor="@color/timerText"/>
 
             <TextView
                 android:id="@+id/text_4"
@@ -140,7 +141,7 @@
                 android:layout_height="wrap_content"
                 android:text="Seconds"
                 android:textSize="14sp"
-                android:textColor="@android:color/holo_blue_dark"/>
+                android:textColor="@color/timerText"/>
         </LinearLayout>
 
     </LinearLayout>
